Fixing problem on firefox android intro  #124

--- a/src/pages/Intro/Intro.module.css
+++ b/src/pages/Intro/Intro.module.css
@@ -209,7 +209,7 @@
     z-index: 10;
     position: absolute;
     display: flex;
-    top: -350px;
+    /* top: -350px; */
     left: 0;
     right: 0;
     bottom: 0;
